# openday-heatmap

./: README.md
QR_codes/: README.md  barcode_accompanying_text.xlsx  notes.ipynb  url_list.csv  zone_names.csv  ~$barcode_accompanying_text.xlsx
QR_codes/.ipynb_checkpoints/: notes-checkpoint.ipynb
TestAPI/: .gitignore  Dockerfile  README.md  main.py  models.py  pyproject.toml  requirements.txt  schema.py
TestAPI/alembic/: env.py
TestAPI/alembic/versions/: 0f8abd56eee8_new_migration2.py  13951b066554_new_migration.py  45f4d16d18ae_new_migration.py  45f53a8dd800_new_migration.py  4e9d1887afdf_new_migration2.py  626f90c845e1_new_migration.py  6320e35c7e03_new_migration.py  6af7afb1b88f_new_migration.py  763d96143454_new_migration.py  8e5f00d45ad0_new_migration.py  cee7ca416950_new_migration.py  d6475546a69e_new_migration2.py  e61815ea606d_new_migration.py  f2e6e7215598_new_migration.py
TestAPI/app/: alembic.ini  main.py  models.py  schema.py
website/: .gitignore  Dockerfile  README.md  astro.config.mjs  package.json  pnpm-lock.yaml
website/src/: consts.ts  env.d.ts
website/src/components/: BaseHead.astro  EmojiFeedback.tsx  Footer.astro  FormattedDate.astro  Header.astro
website/src/content/: config.ts
website/src/content/zone/: 3d-printing.mdx  blackmagic-design.mdx  coding.mdx  computing.mdx  engineering-technology-centre.mdx  exploring-the-nucleus.mdx  innovation-centre.mdx  particle-accelerator.mdx  particles-and-light.mdx  some-uuid.mdx  space.mdx  stall-template.mdx  (+3 more)
website/src/layouts/: ZoneInfo.astro
website/src/pages/: index.astro  rss.xml.js
(+4 files in other folders)
