[tool.poetry]
name = "heatmap-api"
version = "0.1.0"
description = "API which links the website and the heatmap together."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.18"
psycopg2 = "^2.9.6"
fastapi = "^0.100.0"
pydantic = "^2.0.2"
fastapi-sqlalchemy = "^0.2.1"
alembic = "^1.11.1"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
